# tg

./: .gitattributes  CMakeLists.txt  CMakeLists_tgl.txt  Makefile.in  README.md  compile.sh  interface.c  lua-tg.c  results.txt  sema.h
